--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+<!doctype html>
+<html>
 <head>
   <link rel="stylesheet" type="text/css" href="ldazc.css"/>
 </head>
@@ -20,3 +22,4 @@
     </div>
 </div>
 </body>
+</html>
