--- a/index.html
+++ b/index.html
@@ -2,24 +2,31 @@
 <html>
 <head>
   <link rel="stylesheet" type="text/css" href="ldazc.css"/>
+  <script src="ldazc.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
 </head>
 <body>
-  <script src="ldazc.js"></script>
 <div class="wrapper">
-   <h1>Hangman</h1>
-    <p>Use the alphabet below to guess the word. </p>
+   <h1>High-Stakes Hangman</h1>
+    <p>Use Guess Mode to play normally. Think you know the answer? Select Answer Mode and win back lives, but if you answer wrong, you'll lose instantly.</p>
+    <div class="container">
+      <button id="guess">Guess</button>
+      <button id="answer">Answer</button>
+    </div>
 </div>
+
 <div class="wrapper">
-  <canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
     <div id="buttons">
     </div>
     <p id="catagoryName"></p>
     <div id="hold">
     </div>
     <p id="mylives"></p>
+     <canvas id="stickman">This Text will show if the Browser does NOT support HTML5 Canvas tag</canvas>
     <div class="container">
       <button id="reset">Play again</button>
     </div>
 </div>
+<h3 id="subtitle">Modified from <a href="https://codepen.io/cathydutton/pen/ldazc">here</a> by Jenna Kohls</h3>
 </body>
 </html>
